1) Reversion in design: UseCaseProvider no longer inherits from UseCaseFactory. 2) Layered spec repository 3) Statistical companion corrections.